syntax = "proto3";
package bzd.users.sources;

service SourcesService {
    rpc GetSources(GetSourcesRequest) returns (GetSourcesResponse);
    rpc CreateSource(CreateSourceRequest) returns (CreateSourceResponse);
}

message CreateSourceRequest {
    optional string user_id = 101;
    optional string source_user_id = 102;
}

message CreateSourceResponse {
    optional string source_id = 101;
}

message GetSourcesRequest {
    optional string user_id = 101;
}

message GetSourcesResponse {
    repeated Source sources = 501;
    repeated Contact contacts = 502;

    message Source {
        optional string source_user_id = 101;
        optional string name = 102;
    }

    message Contact {
        optional string user_id = 101;
        optional string name = 102;
        optional string phone_number = 103;
    }
}
